[metadata]
name = csil-macd
version = 0.0.1
author = Don MacMillen
author_email = don@macmillen.net
description = Using Yosys, ABC, and OpenSTA to compile and time a design
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/macd/csil
project_urls =
    Bug Tracker = https://github.com/macd/csil/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = csil
packages = find:
python_requires = >=3.6

[options.packages.find]
where = csil